tests/neg-custom-args/captures/widen-reach.check
-- Error: tests/neg-custom-args/captures/widen-reach.scala:8:18 --------------------------------------------------------
8 |trait Bar extends Foo[IO^]: // error
  |                  ^^^^^^^^
  |                  Type variable T of trait Foo cannot be instantiated to IO^ since
  |                  that type captures the root capability `cap`.
  |
  |                  where:    ^ refers to the universal root capability
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/widen-reach.scala:9:24 -----------------------------------
9 |  val foo: IO^ -> IO^ = x => x // error
  |                        ^^^^^^
  |                        Found:    (x: IO^) ->? IO^²
  |                        Required: IO^ -> IO^³
  |
  |                        where:    ^  refers to the universal root capability
  |                                  ^² refers to a root capability associated with the result type of (x: IO^): IO^²
  |                                  ^³ refers to a fresh root capability in the type of value foo
  |
  |                        Note that capability <cap of (x: IO^): IO^> is not included in capture set {cap}
  |                        because <cap of (x: IO^): IO^> is not visible from cap in value foo.
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/widen-reach.scala:13:26 ----------------------------------
13 |  val y2: IO^ -> IO^ = y1.foo      // error
   |                       ^^^^^^
   |                       Found:    IO^ ->{x*} IO^{x*}
   |                       Required: IO^ -> IO^²
   |
   |                       where:    ^  refers to the universal root capability
   |                                 ^² refers to a fresh root capability in the type of value y2
   |
   |                       Note that capability x* is not included in capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/widen-reach.scala:14:30 ----------------------------------
14 |  val y3: IO^ -> IO^{x*} = y1.foo  // error
   |                           ^^^^^^
   |                           Found:    IO^ ->{x*} IO^{x*}
   |                           Required: IO^ -> IO^{x*}
   |
   |                           where:    ^ refers to the universal root capability
   |
   |                           Note that capability x* is not included in capture set {}.
   |
   | longer explanation available when compiling with `-explain`
